# Agent-Research-Foundation

./: .gitignore  Context  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml  pages.yml  tests.yml
agent_research/: cli.py  dashboard.py
agent_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_research/agents/: anthropic_agent.py  base.py  echo_agent.py  factory.py  openai_agent.py
agent_research/core/: artifacts.py  events.py  execution_oracle.py  metrics.py  oracles.py  registry.py  regression.py  report.py  run_context.py  runner.py  schemas.py  summary.py  traces.py
agent_research/execution/: docker_runner.py  workspace.py
agent_research/oracles/: base.py  rule_based.py
agent_research/verticals/ai_agent_eval/: execution_graders.py  graders.py
artifacts/reactive-flux-aware-surface-selection/: README.md  agent-theory-link.md  surface_selection_schema.json
backend/: .env.example  Dockerfile  README.md  main.py  start.sh  test_health.py
benchmarks/clearbench_mini/: compliance_gdpr.yaml  customer_support_refund.yaml  software_dev_bugfix.yaml
contracts/: research-contract.md
research/: README.md
research/papers/: 2605.29207-augmentation-to-reconstruction.md  2605.29207-augmentation-to-reconstruction.yaml
tests/: test_events.py  test_execution_events.py  test_metrics.py  test_oracles.py  test_runner_events.py  test_workspace.py
ui/: .env.example  index.html  package.json  vite.config.ts
ui/src/: App.tsx  sampleData.ts
(+5 files in other folders)
